--- a/maintab.html
+++ b/maintab.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
+    <link rel="stylesheet" href="StyleSheet.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1917: Review on One-shot Style!</title>
-  </head>
+</head>
 
-  <body></body>
+<body></body>
+
 </html>
