Added first short paragraph description

--- a/maintab.html
+++ b/maintab.html
@@ -11,7 +11,12 @@
 <h1>1917: Review on One-shot Style!</h1>
 
 <body>
-    <P></P>
+    <P>The film 1917 makes excellent use of the continous or one-shot style of filming.
+        The style was used to great effect and made the entire film feel as if it were all one shot,
+        despite being multiple long shots edited together in post. The use of this style really adds to
+        the emotional connection to the film and its characters. It allowes the viewer to feel as if they
+        are right there In the moment with the characters experiencing what they are along side them.
+    </P>
 </body>
 
 </html>
