Second descriptor paragraph

--- a/maintab.html
+++ b/maintab.html
@@ -17,6 +17,9 @@
         the emotional connection to the film and its characters. It allowes the viewer to feel as if they
         are right there In the moment with the characters experiencing what they are along side them.
     </P>
+    <p>While this film does make excellant sue of the one-shot style of filming it is far from the only example of such
+        and many other pieces of media that use one-shot to great effect.
+    </p>
 </body>
 
 </html>
