--- a/maintab.html
+++ b/maintab.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="StyleSheet.css" />
-    <title>1917: Review on One-shot Style!</title>
-  </head>
-  <h1>1917: Review on One-shot Style!</h1>
 
-  <body>
-    <p>
-      The film 1917 makes excellent use of the continous or one-shot style of
-      filming. The style was used to great effect and made the entire film feel
-      as if it were all one shot, despite being multiple long shots edited
-      together in post. The use of this style really adds to the emotional
-      connection to the film and its characters. It allows the viewer to feel as
-      if they are right there In the moment with the characters experiencing
-      what they are along side them.
-    </p>
-    <p>
-      While this film does make excellant sue of the one-shot style of filming
-      it is far from the only example of such and many other pieces of media
-      that use one-shot to great effect.
-    </p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="StyleSheet.css" />
+  <title>1917: Review on One-shot Style!</title>
+</head>
+<h1>1917: Review on One-shot Style!</h1>
+
+<body>
+  <p>
+    The film 1917 makes excellent use of the continous or one-shot style of
+    filming. The style was used to great effect and made the entire film feel
+    as if it were all one shot, despite being multiple long shots edited
+    together in post. The use of this style really adds to the emotional
+    connection to the film and its characters. It allows the viewer to feel as
+    if they are right there In the moment with the characters experiencing
+    what they are along side them.
+  </p>
+  <p>
+    While this film does make excellant use of the one-shot style of filming
+    it is far from the only example of such and many other pieces of media
+    that use one-shot to great effect.
+  </p>
+</body>
+
 </html>
