grammar and spelling correction

--- a/maintab.html
+++ b/maintab.html
@@ -12,17 +12,17 @@
   <body>
     <p>
       The film 1917 makes excellent use of the continous or one-shot style of
-      filming. The style was used to great effect and made the entire film feel
-      as if it were all one shot, despite being multiple long shots edited
-      together in post. The use of this style really adds to the emotional
-      connection to the film and its characters. It allows the viewer to feel as
-      if they are right there In the moment with the characters experiencing
-      what they are along side them.
+      filming. The style was used to great effect - in fact - the entire film
+      was all in one shot, despite being multiple long shots edited together in
+      post. The use of this style really adds to the emotional connection to the
+      film and its characters. It allows the viewer to feel as if they are right
+      there in the moment with the characters; experiencing what they are along
+      side of them.
     </p>
     <p>
-      While this film does make excellant sue of the one-shot style of filming
-      it is far from the only example of such and many other pieces of media
-      that use one-shot to great effect.
+      While this film does execute this filming flawlessly, it is far from the
+      only example of many other pieces of media that use one-shot to great
+      effect.
     </p>
   </body>
 </html>
