Picture Imbed Test

--- a/maintab.html
+++ b/maintab.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="StyleSheet.css" />
-    <title>1917: Review on One-shot Style!</title>
-  </head>
 
-  <body>
-    <h1>1917: Review on One-shot Style!</h1>
-    <p>
-      The film 1917 makes excellent use of the continous or one-shot style of
-      filming. The style was used to great effect - in fact - the entire film
-      was all in one shot, despite being multiple long shots edited together in
-      post. The use of this style really adds to the emotional connection to the
-      film and its characters. It allows the viewer to feel as if they are right
-      there in the moment with the characters; experiencing what they are along
-      side of them.
-    </p>
-    <p>
-      While this film does execute this filming flawlessly, it is far from the
-      only example of many other pieces of media that use one-shot to great
-      effect.
-    </p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="StyleSheet.css" />
+  <title>1917: Review on One-shot Style!</title>
+</head>
+
+<body>
+  <h1>1917: Review on One-shot Style!</h1>
+  <img src="https://upload.wikimedia.org/wikipedia/en/f/fe/1917_%282019%29_Film_Poster.jpeg" alt="1917 Film Poster">
+  <p>
+    The film 1917 makes excellent use of the continous or one-shot style of
+    filming. The style was used to great effect - in fact - the entire film
+    was all in one shot, despite being multiple long shots edited together in
+    post. The use of this style really adds to the emotional connection to the
+    film and its characters. It allows the viewer to feel as if they are right
+    there in the moment with the characters; experiencing what they are along
+    side of them.
+  </p>
+  <p>
+    While this film does execute this filming flawlessly, it is far from the
+    only example of many other pieces of media that use one-shot to great
+    effect.
+  </p>
+</body>
+
 </html>
