--- a/maintab.html
+++ b/maintab.html
@@ -10,10 +10,14 @@
 
   <body>
     <h1>1917: Review on One-shot Style!</h1>
-    <img
-      src="https://media.npr.org/assets/img/2020/01/09/8v66_fp_v1678_wide-84d72f58b250a6518de45d8bbfa3fe786c82443b-s1600-c85.webp"
-      alt="1917 Main Page IMG"
-    />
+    <div class="wrapper">
+      <div class="box">
+        <img
+          src="https://media.npr.org/assets/img/2020/01/09/8v66_fp_v1678_wide-84d72f58b250a6518de45d8bbfa3fe786c82443b-s1600-c85.webp"
+          alt="1917 Main Page IMG"
+        />
+      </div>
+    </div>
     <p>
       The film 1917 makes excellent use of the continous or one-shot style of
       filming. The style was used to great effect - in fact - the entire film
