--- a/maintab.html
+++ b/maintab.html
@@ -25,7 +25,7 @@
       post. The use of this style really adds to the emotional connection to the
       film and its characters. It allows the viewer to feel as if they are right
       there in the moment with the characters; experiencing what they are along
-      side of them. Merge test
+      side of them.
     </p>
     <p>
       While this film does execute this filming flawlessly, it is far from the
