--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
       only example of many other pieces of media that use one-shot to great
       effect.
     </p>
+    <a href="definitionofoneshot.html"> What is One-Shot? </a>
+    <a href="otherexamplesofoneshot.html"> One-Shot in Media </a>
   </body>
 </html>
