Expand on definition

--- a/definitionofoneshot.html
+++ b/definitionofoneshot.html
@@ -12,7 +12,9 @@
 <body>
     <h1>What Is One-Shot?</h1>
     <p>The style of filming known as One-Shot is when the crew films in very long takes using a single camera
-        to give the impression that the entire film was made in one shot or sitting. </p>
+        to give the impression that the entire film was made in one shot or sitting. While shooting certain scenes
+        in only One-Shot is fairly common it's very uncommon for an entire film to be shot in the One-Shot style as
+        1917 was.</p>
 
 </body>
 
