added links to definition

--- a/definitionofoneshot.html
+++ b/definitionofoneshot.html
@@ -21,6 +21,8 @@
         to give the impression that the entire film was made in one shot or sitting. While shooting certain scenes
         in only One-Shot is fairly common it's very uncommon for an entire film to be shot in the One-Shot style as
         1917 was.</p>
+    <a href="index.html"> 1917: Review On One-Shot Style!</a>
+    <a href="otherexamplesofoneshot.html"> One-Shot in Media</a>
 
 </body>
 
