add first example to example list

--- a/otherexamplesofoneshot.html
+++ b/otherexamplesofoneshot.html
@@ -12,6 +12,8 @@
 <body>
     <h1>One-Shot in Media</h1>
     <p>some other great examples of One-Shot Style in media include</p>
+    <p>The Hospital Shootout- Hard Boiled</p>
+
 
 </body>
 
