Added embed video to examples

--- a/otherexamplesofoneshot.html
+++ b/otherexamplesofoneshot.html
@@ -13,7 +13,9 @@
     <h1>One-Shot in Media</h1>
     <p>some other great examples of One-Shot Style in media include</p>
     <p>The Hospital Shootout- Hard Boiled</p>
-
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/5lnsOG9nuDA" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
 
 </body>
 
