--- a/otherexamplesofoneshot.html
+++ b/otherexamplesofoneshot.html
@@ -27,6 +27,11 @@
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe></center>
+    <h2>Hallway Scence - The Shining</h2>
+    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/0pIfyTXphgE?start=5"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe></center>
 
 </body>
 
