added links to examples page

--- a/otherexamplesofoneshot.html
+++ b/otherexamplesofoneshot.html
@@ -32,6 +32,8 @@
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe></center>
+    <a href="index.html">1917: Review On One-Shot Style!</a>
+    <a href="definitionofoneshot.html"> What Is One-Shot?</a>
 
 </body>
 
