add another example to oneshot example page, made small text edit

--- a/otherexamplesofoneshot.html
+++ b/otherexamplesofoneshot.html
@@ -1,40 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="StyleSheet.css" />
     <title>One-Shot in Media</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>One-Shot in Media</h1>
-    <p>some other great examples of One-Shot Style in media include</p>
+    <p>
+      Some other great examples of One-Shot Style in media include the
+      following!
+    </p>
     <h2>The Hospital Shootout - Hard Boiled</h2>
-    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/5lnsOG9nuDA"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe></center>
+    <center>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/5lnsOG9nuDA"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </center>
     <h2>Tower Fight - The Protector</h2>
-    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/ACdGsKTPxxg"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe></center>
+    <center>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/ACdGsKTPxxg"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </center>
     <h2>Hallway Fight - Oldboy</h2>
-    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/OU8949uj5YI"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe></center>
+    <center>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/OU8949uj5YI"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </center>
     <h2>Hallway Scence - The Shining</h2>
-    <center><iframe width="560" height="315" src="https://www.youtube.com/embed/0pIfyTXphgE?start=5"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe></center>
+    <center>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/0pIfyTXphgE?start=5"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </center>
+    <h2>Hallway Fight - Daredevil S1 E1</h2>
+    <center>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/B66feInucFY"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </center>
     <a href="index.html">1917: Review On One-Shot Style!</a>
     <a href="definitionofoneshot.html"> What Is One-Shot?</a>
-
-</body>
-
+  </body>
 </html>
