add video embed on index and definitionofoneshot page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,22 @@
       side of them.
     </p>
     <p>
+      For example as shown here, the emotional buildup towards the end of the
+      movie when Lance Corporal William is literally racing against time to
+      deliver the message, viewers gain a sense of desperation and anxiety.
+    </p>
+    <center>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/WYCo-3pw52o"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </center>
+    <p>
       While this film does execute this filming flawlessly, it is far from the
       only example of many other pieces of media that use one-shot to great
       effect.
