--- a/otherexamplesofoneshot.html
+++ b/otherexamplesofoneshot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="OtherExampleStyleSheet.css" />
+    <link rel="stylesheet" href="StyleSheet.css" />
     <title>One-Shot in Media</title>
   </head>
 
