--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
       only example of many other pieces of media that use one-shot to great
       effect.
     </p>
-    <a href="definitionofoneshot.html"> What is One-Shot? </a>
-    <a href="otherexamplesofoneshot.html"> One-Shot in Media </a>
+    <div id="content">
+      <a href="definitionofoneshot.html"> What is One-Shot? </a>
+      <div id="main"></div>
+      <a href="otherexamplesofoneshot.html"> One-Shot in Media </a>
+    </div>
   </body>
 </html>
