customize css link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       movie when Lance Corporal William is literally racing against time to
       deliver the message, viewers gain a sense of desperation and anxiety.
     </p>
-    <center>
+    <div class="video">
       <iframe
         width="560"
         height="315"
@@ -42,15 +42,14 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
-    </center>
+    </div>
     <p>
       While this film does execute this filming flawlessly, it is far from the
       only example of many other pieces of media that use one-shot to great
       effect.
     </p>
-    <div id="content">
+    <div id="nav">
       <a href="definitionofoneshot.html"> What is One-Shot? </a>
-      <div id="main"></div>
       <a href="otherexamplesofoneshot.html"> One-Shot in Media </a>
     </div>
   </body>
