--- a/otherexamplesofoneshot.html
+++ b/otherexamplesofoneshot.html
@@ -15,7 +15,7 @@
       following!
     </p>
     <h2>The Hospital Shootout - Hard Boiled</h2>
-    <center>
+    <div class="video">
       <iframe
         width="560"
         height="315"
@@ -25,9 +25,9 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
-    </center>
+    </div>
     <h2>Tower Fight - The Protector</h2>
-    <center>
+    <div class="video">
       <iframe
         width="560"
         height="315"
@@ -37,9 +37,9 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
-    </center>
+    </div>
     <h2>Hallway Fight - Oldboy</h2>
-    <center>
+    <div class="video">
       <iframe
         width="560"
         height="315"
@@ -49,9 +49,9 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
-    </center>
+    </div>
     <h2>Hallway Scence - The Shining</h2>
-    <center>
+    <div class="video">
       <iframe
         width="560"
         height="315"
@@ -61,9 +61,9 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
-    </center>
+    </div>
     <h2>Hallway Fight - Daredevil S1 E1</h2>
-    <center>
+    <div class="video">
       <iframe
         width="560"
         height="315"
@@ -73,8 +73,10 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
-    </center>
-    <a href="index.html">1917: Review On One-Shot Style!</a>
-    <a href="definitionofoneshot.html"> What Is One-Shot?</a>
+    </div>
+    <div id="nav">
+      <a href="index.html"> GO BACK </a>
+      <div>&nbsp;</div>
+    </div>
   </body>
 </html>
