--- a/definitionofoneshot.html
+++ b/definitionofoneshot.html
@@ -25,7 +25,7 @@
       One-Shot is fairly common it's very uncommon for an entire film to be shot
       in the One-Shot style as 1917 was.
     </p>
-    <center>
+    <div class="video">
       <iframe
         width="560"
         height="315"
@@ -35,8 +35,10 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
-    </center>
-    <a href="index.html"> 1917: Review On One-Shot Style!</a>
-    <a href="otherexamplesofoneshot.html"> One-Shot in Media</a>
+    </div>
+    <div id="nav">
+      <div>&nbsp;</div>
+      <a href="index.html"> GO BACK </a>
+    </div>
   </body>
 </html>
