character name correction

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </p>
     <p>
       For example as shown here, the emotional buildup towards the end of the
-      movie when Lance Corporal William is literally racing against time to
+      movie when Lance Corporal Schofield is literally racing against time to
       deliver the message, viewers gain a sense of desperation and anxiety.
     </p>
     <div class="video">
