--- a/otherexamplesofoneshot.html
+++ b/otherexamplesofoneshot.html
@@ -50,7 +50,7 @@
         allowfullscreen
       ></iframe>
     </div>
-    <h2>Hallway Scence - The Shining</h2>
+    <h2>Hallway Scene - The Shining</h2>
     <div class="video">
       <iframe
         width="560"
